# TideFinder_pi

./: .travis.yml  CMakeLists.txt  Plugin.cmake  README.md  TideFinder-plugin.xml.in  appveyor.yml
ci/: circleci-build-flatpak.sh  upload.bat.in
cmake/: Targets.cmake  TemplateVersion
docs/: README.md  antora.yml  site.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc  ios_faq.adoc
docs/public/TideFinder/: index.html
flatpak/: org.opencpn.OpenCPN.Plugin.TideFinder.yaml
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
po/: POTFILES.in  TideFinder_pi.pot  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  gl.po  hu.po  it.po  nb.po  nl.po  pl.po  pt.po  ru.po  sv.po  tidefinder_pi.pot  tr.po  vi.po  zh.po
src/: NavFunc.cpp  NavFunc.h  TCWin.cpp  TCWin.h  TideFinder_pi.cpp  TideFinder_pi.h  TideFindergui.cpp  TideFindergui.h  TideFindergui_impl.cpp  TideFindergui_impl.h  icons.cpp  icons.h  tcmgr.cpp  tcmgr.h
